[docs.helm.sh] fix layout/overflow of left sidebar links

--- a/docs.helm.sh/themes/helmdocs/static/src/sass/docs-responsive.scss
+++ b/docs.helm.sh/themes/helmdocs/static/src/sass/docs-responsive.scss
@@ -186,10 +186,6 @@
   .sidebar {
     padding-bottom: 0px;
 
-    .sidebar-nav {
-      padding-bottom: 180px;
-    }
-
     .sidebar-buttons {
       position: fixed;
       bottom: 0;
