--- a/docs.helm.sh/themes/helmdocs/static/src/sass/docs-sidebar.scss
+++ b/docs.helm.sh/themes/helmdocs/static/src/sass/docs-sidebar.scss
@@ -2,13 +2,28 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  min-height: 100%;
   left: 0;
   top: 0;
+  bottom: 0;
   background: desaturate(lighten($blue1, 35%), 20%);
   z-index: 700;
   position: fixed;
-  overflow-y: scroll;
   border-right: 1px solid lighten($blue1, 35%);
+
+  // wrap the sidebar links in a vertical scrollable section
+    // 100% height (minus the height of h1 and sidebar-button)
+  .sidebar-wrap {
+    overflow-x: hidden;
+    overflow-y: scroll;
+    display: block;
+    position: relative;
+    height: 100%;
+    margin-top: -5rem;
+    margin-bottom: -4.75rem;
+    z-index: 10;
+    padding: 0;
+  }
 
   a {
     @include transition;
@@ -37,6 +52,9 @@
   h1 {
     margin: 0;
     padding: 0;
+    min-height: 5rem;
+    z-index: 1020;
+    position: relative;
     text-transform: none;
 
     a {
@@ -74,8 +92,8 @@
   }
 
   ul {
-    margin: 3.667em auto 2em;
-    padding: 0;
+    margin: 0 auto 0.5em;
+    padding: 7.5rem 0 6rem;
 
     li {
       a {
@@ -172,6 +190,7 @@
 
   .sidebar-buttons {
     border-top: 2px solid $light2;
+    min-height: 4.75rem;
     background: desaturate(lighten($blue1, 35%), 20%);
 
     .button-wrap {
